test_regress/t/t_enum_overlap_bad.out
%Error: t/t_enum_overlap_bad.v:11:11: Overlapping enumeration value: 'e1b'
                                    : ... In instance t
          e1b=1
          ^~~
        t/t_enum_overlap_bad.v:9:11: ... Location of original declaration
          e1,
          ^~
%Error: Exiting due to
